# guestfs-tools

./: .gitignore  HACKING  Makefile.am  README  bugs-in-changelog.sh  config.sh.in  configure.ac  ocaml-dep.sh.in  podcheck.pl  podwrapper.pl.in  run.in  subdir-rules.mk  test-functions.sh  valgrind-suppressions
.github/workflows/: main.yml
align/: Makefile.am  scan.c  test-virt-alignment-scan-docs.sh  test-virt-alignment-scan-guests.sh
bash/: Makefile.am  virt-alignment-scan  virt-win-reg
builder/: Makefile.am  builder.ml  cache.ml  cache.mli  cmdline.ml  cmdline.mli  downloader.ml  index-parse.y  index-scan.l  index-validate.c  index.ml  index.mli  index_parser.ml  index_parser_tests.ml  ini_reader.ml  ini_reader.mli  languages.ml  libguestfs.conf.in  list_entries.ml  opensuse.conf.in  opensuse.gpg  paths.ml  paths.mli  pxzcat-c.c  pxzcat.ml  repository_main.ml  repository_main.mli  setlocale.ml  sigchecker.ml  simplestreams_parser.ml  sources.ml  test-console.sh  test-docs.sh  test-index  test-virt-builder-cacheall.sh  test-virt-builder-list-simplestreams.sh  test-virt-builder-list.sh  test-virt-builder-planner.sh  test-virt-builder-repository.sh  test-virt-builder.sh  (+7 more)
builder/templates/: Makefile.am  alma-8.5.index-fragment  alma-8.5.ks  alma-8.5.virt-install-cmd  centosstream-8.index-fragment  centosstream-8.ks  centosstream-8.virt-install-cmd  centosstream-9.index-fragment  centosstream-9.ks  centosstream-9.virt-install-cmd  debian-11.index-fragment  debian-11.virt-install-cmd  debian-12.index-fragment  debian-12.virt-install-cmd  debian-13.index-fragment  debian-13.virt-install-cmd  fedora-34-armv7l.index-fragment  fedora-34-armv7l.ks  fedora-34-armv7l.virt-install-cmd  fedora-34.index-fragment  fedora-34.ks  fedora-34.virt-install-cmd  fedora-35-aarch64.index-fragment  fedora-35-aarch64.ks  fedora-35.ks  (+71 more)
cat/: Makefile.am  cat.c  filesystems.c  log.c  ls.c  tail.c  test-docs.sh  test-virt-cat.sh  test-virt-filesystems.sh  test-virt-log.sh  test-virt-ls.sh  virt-cat.pod  virt-filesystems.pod  virt-log.pod  virt-ls.pod
customize/: Makefile.am  customize_main.ml  customize_main.mli  customize_run.ml  hostname.ml  hostname.mli  password.ml  password.mli  perl_edit.ml  random_seed.ml  random_seed.mli  test-password.pl  test-settings.sh  test-virt-customize-docs.sh  test-virt-customize-root.sh  test-virt-customize.sh  timezone.ml  virt-customize.pod
df/: Makefile.am  df.c  main.c  output.c  test-virt-df-docs.sh  test-virt-df-guests.sh  test-virt-df.sh  virt-df.h  virt-df.pod
dib/: Makefile.am  dib.ml  output_format.ml  output_format.mli  output_format_docker.ml  output_format_qcow2.ml  output_format_raw.ml  output_format_tar.ml  output_format_vhd.ml  virt-dib.pod
diff/: Makefile.am  diff.c  test-virt-diff-docs.sh  test-virt-diff.sh  virt-diff.pod
docs/: Makefile.am  guestfs-tools-release-notes-1.48.pod  guestfs-tools-release-notes-1.50.pod  guestfs-tools-release-notes-1.52.pod  guestfs-tools-release-notes-1.54.pod  guestfs-tools-release-notes-1.56.pod
drivers/: Makefile.am  drivers.ml  drivers.mli  expected-fedora.xml  expected-windows.xml  hwdata.ml  hwdata.mli  hwdata_config.ml.in  hwdata_config.mli  test-virt-drivers-docs.sh  test-virt-drivers-linux.sh  test-virt-drivers-windows.sh  virt-drivers.pod
edit/: Makefile.am  edit.c  test-virt-edit-docs.sh  test-virt-edit.sh  virt-edit.pod
filesystems/: Makefile.am  filesystems.c  test-docs.sh  test-virt-filesystems.sh  utils.c  utils.h  virt-filesystems.pod
format/: Makefile.am  format.c  test-virt-format-docs.sh  test-virt-format.sh
get-kernel/: Makefile.am  get_kernel.ml  get_kernel.mli  test-virt-get-kernel-docs.sh  virt-get-kernel.pod
inspector/: Makefile.am  expected-coreos.img.xml  expected-fedora-luks-on-lvm.img.xml  expected-fedora.img.xml  inspector.c  test-virt-inspector-docs.sh  test-virt-inspector-luks-on-lvm.sh  test-virt-inspector-lvm-on-luks.sh  test-virt-inspector.sh  test-xmllint.sh  virt-inspector.pod  virt-inspector.rng
lib/: guestfs-internal-all.h
log/: Makefile.am  log.c  test-docs.sh  test-virt-log.sh
ls/: Makefile.am  ls.c  test-docs.sh  virt-ls.pod
m4/: guestfs-c.m4  guestfs-libraries.m4  guestfs-misc-libraries.m4  guestfs-ocaml-gettext.m4  guestfs-ocaml.m4  guestfs-perl.m4  guestfs-progs.m4
make-fs/: Makefile.am  make-fs.c  test-virt-make-fs-docs.sh  test-virt-make-fs.sh  virt-make-fs.pod
po/: LINGUAS  Makefile.am  POTFILES  POTFILES-ml  POTFILES-pl  cs.po  de.po  en_GB.po  es.po  eu.po  fr.po  gu.po  guestfs-tools.pot  hi.po  ja.po  ka.po  kn.po  ml.po  mr.po  nl.po  or.po  pa.po  pl.po  pt_BR.po  ru.po  ta.po  te.po  tg.po  uk.po  zh_CN.po
po-docs/: LINGUAS  Makefile.am  cs.po  de.po  en_GB.po  es.po  eu.po  fr.po  guestfs-tools-docs.pot  ja.po  language.mk  nl.po  podfiles  pt_BR.po  ru.po  tg.po  zh_CN.po
resize/: Makefile.am  resize.ml  resize.mli  rhbz1285847.sh  test-virt-resize-docs.sh  test-virt-resize.pl  virt-resize.pod
sparsify/: Makefile.am  cmdline.ml  cmdline.mli  copying.ml  copying.mli  in_place.ml  in_place.mli  sparsify.ml  sparsify.mli  test-virt-sparsify-docs.sh  test-virt-sparsify-in-place-fstrim-unsupported.sh  test-virt-sparsify-in-place.sh  test-virt-sparsify.sh  utils.ml  utils.mli  virt-sparsify.pod
sysprep/: Makefile.am  main.ml  main.mli  sysprep_operation.ml  sysprep_operation_backup_files.ml  sysprep_operation_ca_certificates.ml  sysprep_operation_ipa_client.ml  sysprep_operation_lvm_system_devices.ml  sysprep_operation_lvm_uuids.ml  sysprep_operation_machine_id.ml  sysprep_operation_net_hostname.ml  sysprep_operation_net_hwaddr.ml  sysprep_operation_net_nmconn.ml  sysprep_operation_pacct_log.ml  sysprep_operation_script.ml  sysprep_operation_user_account.ml  sysprep_operation_zsh_history.ml  test-virt-sysprep-backup-files.sh  test-virt-sysprep-docs.sh  test-virt-sysprep-passwords.sh  test-virt-sysprep-script.sh  test-virt-sysprep.sh  utils.ml  virt-sysprep.pod
tail/: Makefile.am  test-docs.sh  test-virt-tail.sh
test-data/: Makefile.am
tests/: Makefile.am  README.txt  functions.sh.in
win-reg/: Makefile.am  virt-win-reg.in
(+25 files in other folders)
